--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
   <img src="https://picsum.photos/500/200?random=6" alt="" />
   <img src="https://picsum.photos/500/200?random=1" alt="" />
   <img src="https://picsum.photos/500/200?random=9" alt="" />
+  <img src="https://picsum.photos/500/200?random=9" alt="" />
 </div>
