--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,20 @@
-<div class="photos">
+
+
+ <header class="header"> 
+  <img src="" alt="">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Our services</a></li>
+      <li><a href="#">Our blog</a> </li>
+      <li><a href="#">Contact us</a></li>
+      <li> <a href="#">buy now</a></li>
+  </ul>
+  </header>
+
+  <div class="photos">gi
+<!-- 
+  
   <img src="https://picsum.photos/500/200?random=3" alt="" />
   <img src="https://picsum.photos/500/200?random=5" alt="" />
   <img src="https://picsum.photos/500/200?random=2" alt="" />
@@ -6,4 +22,4 @@
   <img src="https://picsum.photos/500/200?random=1" alt="" />
   <img src="https://picsum.photos/500/200?random=9" alt="" />
   <img src="https://picsum.photos/500/200?random=9" alt="" />
-</div>
+</div> -->
