--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,30 @@
-.photos {
+
+*{
+  text-decoration: ltr;
+  
+}
+ul{
+  border-bottom:solid 2px rgb(0, 126, 164);
+  
+  list-style: none;
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
-  gap: 10px;
-  flex-wrap: wrap;
+  margin: 10px;
+  padding: 10px;
+  }
+
+ul li a{
+  color: black;
+  display: flex;
+  padding: 10px;
+  border-right: solid 1px rgb(166, 165, 165);
+  text-decoration: none;
 }
-img {
-  border-radius: 10px;
+ul li a:hover{
+ background-color: rgb(0, 126, 164);
+ color: aliceblue;
+ padding: 10px;
+ transition: 1s;
 }
+
