INIT:new changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,66 @@
+<body>
+  <nav class="navbar">
+    <a href="" class="logos"></a>
+    <a href="" class="logos"></a>
+    <a href="" class="logos"></a>
+    <a href="" class="logos"></a>
+  </nav>
 
-
- <header class="header"> 
-  <img src="" alt="">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About us</a></li>
-      <li><a href="#">Our services</a></li>
-      <li><a href="#">Our blog</a> </li>
-      <li><a href="#">Contact us</a></li>
-      <li> <a href="#">buy now</a></li>
-  </ul>
+  <header class="header">
+    <div>
+      <a href="#">HOME</a>
+      <a href="#">ABOUT US</a>
+      <a href="#">OUR SERVICES</a>
+      <a href="#">OUR PROJECT</a>
+      <a href="#">OUR BLOG</a>
+      <a href="#">CONTACT US</a>
+      <button class="connect">buy now</button>
+    </div>
+    <img src="#" alt="" >
   </header>
 
-  <div class="photos">gi
-<!-- 
+
+
+
+<main>
+  <h1 class="h">Making your ideas possible</h1>
+  <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+  <br/>
+  <div class="box">
+    <div class="boxes">Consolting</div>
+    <div class="boxes">Marketing</div>
+    <div class="boxes">Resources</div>
+    <div class="boxes">Finance</div>
+  </div>
+</main>
+
+
+
+
+<div class="container2">
+  <h6>GLOBAL PROFESIONAL NETWORK</h6>
+  <h3>World wide business</h3>
+  <p class="paragraph">Lorem ipsum dolor sit amet consectetur 
+    adipisicing elit. Doloribus nisi nihil labore beatae aliquid 
+    cumque facere quis in molestiae, delectus dolorum magnam,
+     voluptates saepe magni ipsam minima quidem omnis sequi fugiat 
+     qui repellendus rerum rem architecto! Eligendi beatae quis 
+     perferendis assumenda nisi reprehenderit nobis atque eum est 
+     aut a facere debitis nostrum similique autem maiores molestiae,
+      ipsam delectus quas. Perspiciatis explicabo excepturi numquam quia, 
+      quis labore velit esse voluptate tempore sed veritatis sequi sit
+       minima nesciunt animi cupiditate quidem id asperiores neque non 
+       impedit doloribus? Quam optio natus a rerum?</p>
+  <img src="https://picsum.photos/500/200?random=9" alt="" />
+</div>
+
+
+
+<footer class="footer"> 
+  <img src="" alt="" class="phonelogo">
+  <P class="question">Do you have any question about our services?</P>
+  <p class="consult">we provid free consultation so talk with us!</p>
   
-  <img src="https://picsum.photos/500/200?random=3" alt="" />
-  <img src="https://picsum.photos/500/200?random=5" alt="" />
-  <img src="https://picsum.photos/500/200?random=2" alt="" />
-  <img src="https://picsum.photos/500/200?random=6" alt="" />
-  <img src="https://picsum.photos/500/200?random=1" alt="" />
-  <img src="https://picsum.photos/500/200?random=9" alt="" />
-  <img src="https://picsum.photos/500/200?random=9" alt="" />
-</div> -->
+  <button>CALL FOR FREE CONSULTION  </button>
+</footer>
+</body>
