--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,30 +1,90 @@
 
-*{
-  text-decoration: ltr;
-  
+.navbar{
+  background-color: rgb(34, 150, 165);
+  width: 100%;
+  height:20px
+
 }
-ul{
-  border-bottom:solid 2px rgb(0, 126, 164);
-  
-  list-style: none;
-  display: flex;
+.header{
+  width:100%;
+  height:60px;
+  border-bottom: solid 2px  rgb(34, 150, 165);
+  margin: 0px;
+
+}
+.header div{
+  display:flex;
   justify-content: end;
+  align-items:center;
+
+}
+.header .connect{
+  width: 90px;
+  height:30px;
+  background-color: rgb(146, 146, 146);
+  border: solid 1px white;
+  cursor: pointer;
+  
+
+}
+.header div a{
+
+  padding:20px;
+  margin: 5x;
+  border-right: 2px solid rgb(184, 184, 184);
+  color:black;
+  font-size: 12px;
+}
+main{
+  background-color: rgb(34, 150, 165);
+  width:100%;
+  height:550px;
+  display:flex;
+  justify-content: center;
   align-items: center;
-  margin: 10px;
-  padding: 10px;
-  }
+  color: white;
 
-ul li a{
-  color: black;
+  
+}
+main .boxes{
+  width:150px;
+  height: 150px;
+  border: solid 1px rgb(255,255,255,);
+  background-color: rgba(255,255,255,0.3);
+  border-radius:10px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+
+.container2 .paragraph{
+  width: 40%;
+
+}
+
+
+
+
+
+
+
+.footer{
+  background-color: rgb(34, 150, 165);
   display: flex;
-  padding: 10px;
-  border-right: solid 1px rgb(166, 165, 165);
-  text-decoration: none;
+  align-items: center;
+  justify-content: space-around;
+  height: 80px;
+  color: aliceblue;
 }
-ul li a:hover{
- background-color: rgb(0, 126, 164);
- color: aliceblue;
- padding: 10px;
- transition: 1s;
+.footer button{
+  width: 250px;
+  height:30px;
+  background-color: aliceblue;
+  border-radius: 20px;
+  border: solid 1px white;
+  cursor: pointer;
+  
 }
-
+.footer button:hover{
+  background-color: rgb(229, 252, 255);
+}
