--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       <a href="#">OUR PROJECT</a>
       <a href="#">OUR BLOG</a>
       <a href="#">CONTACT US</a>
-      <button class="connect">buy now</button>
+      <button class="connect">Buy now</button>
     </div>
     <img src="#" alt="" >
   </header>
@@ -25,22 +25,23 @@
 <main>
   <h1 class="h">Making your ideas possible</h1>
   <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-  <br/>
+</main>
   <div class="box">
     <div class="boxes">Consolting</div>
     <div class="boxes">Marketing</div>
     <div class="boxes">Resources</div>
     <div class="boxes">Finance</div>
   </div>
-</main>
+
 
 
 
 
 <div class="container2">
-  <h6>GLOBAL PROFESIONAL NETWORK</h6>
-  <h3>World wide business</h3>
-  <p class="paragraph">Lorem ipsum dolor sit amet consectetur 
+  <div class="paragraph">
+   <p>GLOBAL PROFESIONAL NETWORK</p>
+   <p>World wide business</p>
+   <p >Lorem ipsum dolor sit amet consectetur 
     adipisicing elit. Doloribus nisi nihil labore beatae aliquid 
     cumque facere quis in molestiae, delectus dolorum magnam,
      voluptates saepe magni ipsam minima quidem omnis sequi fugiat 
@@ -51,7 +52,9 @@
       quis labore velit esse voluptate tempore sed veritatis sequi sit
        minima nesciunt animi cupiditate quidem id asperiores neque non 
        impedit doloribus? Quam optio natus a rerum?</p>
-  <img src="https://picsum.photos/500/200?random=9" alt="" />
+   </div>
+      
+  <img src="https://picsum.photos/500/300?random=9" alt="" />
 </div>
 
 
