--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,6 @@
-
+*{
+  text-align: center;
+align-items: center;}
 .navbar{
   background-color: rgb(34, 150, 165);
   width: 100%;
@@ -12,15 +14,16 @@
   margin: 0px;
 
 }
-.header div{
+.header div {
   display:flex;
   justify-content: end;
   align-items:center;
+ 
 
 }
 .header .connect{
-  width: 90px;
-  height:30px;
+  width: 100px;
+  height:50px;
   background-color: rgb(146, 146, 146);
   border: solid 1px white;
   cursor: pointer;
@@ -30,36 +33,67 @@
 .header div a{
 
   padding:20px;
-  margin: 5x;
+  margin: 5px;
   border-right: 2px solid rgb(184, 184, 184);
   color:black;
   font-size: 12px;
+  text-decoration: none;
 }
+.header div a:hover{
+  background-color: rgba(149, 243, 255, 0.678);
+  box-shadow: 0px 5px 10px rgb(0, 0, 0);
+  transition: 1s;
+}
+
 main{
   background-color: rgb(34, 150, 165);
   width:100%;
-  height:550px;
-  display:flex;
-  justify-content: center;
-  align-items: center;
+  height: (65vh );
   color: white;
+  
 
   
 }
-main .boxes{
-  width:150px;
-  height: 150px;
-  border: solid 1px rgb(255,255,255,);
-  background-color: rgba(255,255,255,0.3);
-  border-radius:10px;
- display: flex;
- justify-content: center;
- align-items: center;
+.box{
+  margin: -80px 100px 0px 150px;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+}
+.boxes{
+  width:200px;
+  height: 230px;
+  border: solid 0.5px rgba(255, 255, 255, 0.116);
+  background-color: rgb(34, 150, 165);
+  box-shadow: 5px 10px 15px rgba(0,0,0,0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}
+.container2{
+  display:flex;
+  place-items: center;
+  height: 100vh;
+}
+.container2 h6{
+  margin-top: 50px;
+  font-size: 12px;
+ 
+  display: inline-block;
+}
+.container2 h3{
+  margin-top: 50px;
+  font-size: 12px;
+  display: inline-block;
 }
 
 .container2 .paragraph{
-  width: 40%;
-
+  width: 50%;
+ display: inline-block;
+}
+.container2 img{
+  width:50%;
 }
 
 
@@ -75,6 +109,7 @@ main .boxes{
   justify-content: space-around;
   height: 80px;
   color: aliceblue;
+ 
 }
 .footer button{
   width: 250px;
@@ -83,8 +118,10 @@ main .boxes{
   border-radius: 20px;
   border: solid 1px white;
   cursor: pointer;
+ 
   
 }
 .footer button:hover{
   background-color: rgb(229, 252, 255);
+ 
 }
