INIT:new changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,15 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
-  <nav class="navbar">
-    <a href="" class="logos"></a>
-    <a href="" class="logos"></a>
-    <a href="" class="logos"></a>
-    <a href="" class="logos"></a>
-  </nav>
+  <ul class="navbar">
+    <li><a href=""><i class="fa fa-linkedin-square"></i>
+    </a></li>
+    <li><a href=""><i class="fa fa-youtube"></i>
+    </a></li>
+    <li><a href=""><i class="fa fa-twitter-square"></i>
+    </a></li>
+    <li><a href=""><i class="fa fa-facebook-square"></i>
+    </a></li>
+</ul>
 
   <header class="header">
     <div>
@@ -22,9 +27,10 @@
 
 
 
-<main>
+<main >
   <h1 class="h">Making your ideas possible</h1>
   <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
 </main>
   <div class="box">
     <div class="boxes">Consolting</div>
@@ -38,10 +44,10 @@
 
 
 <div class="container2">
-  <div class="paragraph">
-   <p>GLOBAL PROFESIONAL NETWORK</p>
-   <p>World wide business</p>
-   <p >Lorem ipsum dolor sit amet consectetur 
+  <div>
+   <p class="sub-title">GLOBAL PROFESIONAL NETWORK</p>
+   <p class="title">World wide business</p>
+   <p class="description">Lorem ipsum dolor sit amet consectetur 
     adipisicing elit. Doloribus nisi nihil labore beatae aliquid 
     cumque facere quis in molestiae, delectus dolorum magnam,
      voluptates saepe magni ipsam minima quidem omnis sequi fugiat 
@@ -54,16 +60,17 @@
        impedit doloribus? Quam optio natus a rerum?</p>
    </div>
       
-  <img src="https://picsum.photos/500/300?random=9" alt="" />
+  <img src="https://picsum.photos/500/350?random=9" alt="picture" />
 </div>
 
 
 
 <footer class="footer"> 
-  <img src="" alt="" class="phonelogo">
+   <a href=""><i class="fa fa-phone-square"></i></a>
+  <div>
   <P class="question">Do you have any question about our services?</P>
-  <p class="consult">we provid free consultation so talk with us!</p>
+  <p>we provid free consultation so talk with us!</p>
+  </div>
   
   <button>CALL FOR FREE CONSULTION  </button>
 </footer>
-</body>
