INIT:new changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,32 @@
+<div class="main" >
+  <h1 class="h">Making your <br>
+    ideas possible.</h1>
+  <p class="p">Lorem ipsum dolor sit amet consectetur<br>
+     adipisicing elit.</p>
+</div>
 
 
-
-
-
-<main >
-  <h1 class="h">Making your ideas possible</h1>
-  <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-
-</main>
   <div class="box">
-    <div class="boxes">Consolting</div>
-    <div class="boxes">Marketing</div>
-    <div class="boxes">Resources</div>
-    <div class="boxes">Finance</div>
+    <div class="boxes">
+      <i class="fa fa-linkedin-square"></i>
+      <h3>Consolting</h3>
+      <p> Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div class="boxes">
+      <i class="fa fa-linkedin-square"></i>
+      <h3>Marketing</h3>
+      <p> Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div class="boxes">
+      <i class="fa fa-linkedin-square"></i>
+      <h3>Resources</h3>
+      <p> Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div class="boxes">
+      <i class="fa fa-linkedin-square"></i>
+      <h3>Finance</h3>
+      <p> Lorem ipsum dolor sit amet.</p>
+    </div>
   </div>
 
 
@@ -41,7 +55,7 @@
 
 
 
-<footer class="footer"> 
+<div class="footer"> 
    <a href=""><i class="fa fa-phone-square"></i></a>
   <div>
   <P class="question">Do you have any question about our services?</P>
@@ -49,4 +63,4 @@
   </div>
   
   <button>CALL FOR FREE CONSULTION  </button>
-</footer>
+</div>
