--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,22 +8,22 @@
 
   <div class="box">
     <div class="boxes">
-      <i class="fa fa-linkedin-square"></i>
+      <i class="fa fa-users"></i>
       <h3>Consolting</h3>
       <p> Lorem ipsum dolor sit amet.</p>
     </div>
     <div class="boxes">
-      <i class="fa fa-linkedin-square"></i>
+      <i class="fa fa-bar-chart"></i>
       <h3>Marketing</h3>
       <p> Lorem ipsum dolor sit amet.</p>
     </div>
     <div class="boxes">
-      <i class="fa fa-linkedin-square"></i>
+      <i class="fa fa-archive"></i>
       <h3>Resources</h3>
       <p> Lorem ipsum dolor sit amet.</p>
     </div>
     <div class="boxes">
-      <i class="fa fa-linkedin-square"></i>
+      <i class="fa fa-money"></i>
       <h3>Finance</h3>
       <p> Lorem ipsum dolor sit amet.</p>
     </div>
