--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,15 +23,14 @@
   max-width: 600px;
 }
 
-
  .box{
   margin: -80px 100px 0px 150px;
   display: flex;
   justify-content:space-around;
   align-items: center;
   color:white;
+}  
 
-}
 .boxes{
   width:250px;
   height: 300px;
@@ -42,19 +41,15 @@
   justify-content:center;
   align-items: center; 
   flex-direction: column;
- 
 }
+
 .box .boxes i , h3{
   font-size: 25px;
 }
+
 .box .boxes p{
   font-size: 15px;
 }
-
-
-
-
-
 
 
 
@@ -81,7 +76,6 @@
 .container2 .description{
   width: 90%;
   font-size: 20px;
-
 }
 
 
@@ -99,25 +93,28 @@
   height: 200px;
   color: aliceblue;
 }
+
 .footer a{
   font-size: 80px;
   color: white;
 }
+
 .footer .question{
   font-size: 38px;
   font-weight: bold;
 }
+
 .footer button{
-  width: 300px;
+  width: 350px;
   height:45px;
   background-color: aliceblue;
   border-radius: 30px;
   border: solid 2px rgb(214, 251, 255);
   cursor: pointer;
   font-weight: bold;
- 
-  
+  font-size: 15px;  
 }
+
 .footer button:hover{
   background-color: rgba(149, 243, 255, 0.678);
   box-shadow: 0px 5px 10px rgb(0, 0, 0);
