--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,22 +33,27 @@
     border-bottom: solid 2px  rgb(34, 150, 165);
     margin: 0px;
     font-weight: bold;
+    display: flex;
+    justify-content: end;
+    align-items: center;
    
   
   }
-  .header div {
+  .header .menu {
     display:flex;
     justify-content: end;
     align-items:center;
   }
 
-  .header .connect{
-    width: 100px;
-    height:50px;
-    background-color: rgb(146, 146, 146);
+  .header .connect {
+    width: 80px;
+    height:35px;
+    background-color: rgb(88, 88, 88);
     border: solid 1px white;
     cursor: pointer;
-    border-radius: 25px;
+    margin: 0px 15px 0px 15px;
+    color: white;
+   
     
   }
   .header .connect:hover{
@@ -56,7 +61,7 @@
     box-shadow: 0px 5px 10px rgb(0, 0, 0);
     transition: 1s;
   }
-  .header div a{
+  .header .menu a {
   
     padding:20px;
     margin: 5px;
@@ -65,10 +70,16 @@
     font-size: 14px;
     text-decoration: none;
   }
-  .header div a:hover{
+  .header .menu a:hover{
     background-color: rgba(149, 243, 255, 0.678);
     box-shadow: 0px 5px 10px rgb(0, 0, 0);
     transition: 1s;
+  }
+  .header  i{
+    font-size: 20px;
+    padding: 5px;
+    color: rgb(67, 67, 67);
+    
   }
   
   
