INIT:changing to tailwind

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,33 @@
-<div class="main" >
-  <h1 class="h">Making your <br>
+<div class="text-center bg-cyan-700 h-[64vh] text-white flex justify-center items-center flex-col " >
+  <h1 class="text-[70px] mb-[10px]">Making your <br>
     ideas possible.</h1>
-  <p class="p">Lorem ipsum dolor sit amet consectetur<br>
+  <p class="text-[25px]">Lorem ipsum dolor sit amet consectetur<br>
      adipisicing elit.</p>
 </div>
 
 
-  <div class="box">
-    <div class="boxes">
+  <div class=" text-white  flex justify-center items-center mt-[-80px] mr-[100px] mb-[0px] ml-[150px]" >
+    <div class="bg-cyan-700 w-[250px] h-[300px]
+     border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] 
+     flex justify-center items-center flex-col ">
       <i class="fa fa-users"></i>
-      <h3>Consolting</h3>
-      <p> Lorem ipsum dolor sit amet.</p>
+      <h3 class =" text-[25px]">Consolting </h3>
+      <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
-    <div class="boxes">
+    <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
       <i class="fa fa-bar-chart"></i>
-      <h3>Marketing</h3>
-      <p> Lorem ipsum dolor sit amet.</p>
+      <h3 class =" text-[25px]" >Marketing</h3>
+      <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
-    <div class="boxes">
+    <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
       <i class="fa fa-archive"></i>
-      <h3>Resources</h3>
-      <p> Lorem ipsum dolor sit amet.</p>
+      <h3 class =" text-[25px]">Resources</h3>
+      <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
-    <div class="boxes">
+    <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
       <i class="fa fa-money"></i>
-      <h3>Finance</h3>
-      <p> Lorem ipsum dolor sit amet.</p>
+      <h3 class =" text-[25px]">Finance</h3>
+      <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
   </div>
 
@@ -35,9 +37,9 @@
 
 <div class="container2">
   <div>
-   <p class="sub-title">GLOBAL PROFESIONAL NETWORK</p>
-   <p class="title">World wide business</p>
-   <p class="description">Lorem ipsum dolor sit amet consectetur 
+   <p class="text-[15px]">GLOBAL PROFESIONAL NETWORK</p>
+   <p class="text-[40px] font-bold">World wide business</p>
+   <p class="text-[20px] w-[90%]">Lorem ipsum dolor sit amet consectetur 
     adipisicing elit. Doloribus nisi nihil labore beatae aliquid 
     cumque facere quis in molestiae, delectus dolorum magnam,
      voluptates saepe magni ipsam minima quidem omnis sequi fugiat 
@@ -55,7 +57,7 @@
 
 
 
-<div class="footer"> 
+<div class=" bg-cyan-700  bg-[length:200px_100px] text-white flex justify-around items-center  h-[200px]"> 
    <a href=""><i class="fa fa-phone-square"></i></a>
   <div>
   <P class="question">Do you have any question about our services?</P>
