INIT:css changed to tailwind

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </div>
 
 
-  <div class=" text-white  flex justify-center items-center mt-[-80px] mr-[100px] mb-[0px] ml-[150px]" >
+  <div class=" text-white  flex justify-between items-center mt-[-80px] mr-[100px] mb-[0px] ml-[150px]" >
     <div class="bg-cyan-700 w-[250px] h-[300px]
      border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] 
      flex justify-center items-center flex-col ">
@@ -35,11 +35,11 @@
 
 
 
-<div class="container2">
+<div class="flex justify-around items-center h-[100vh]">
   <div>
-   <p class="text-[15px]">GLOBAL PROFESIONAL NETWORK</p>
-   <p class="text-[40px] font-bold">World wide business</p>
-   <p class="text-[20px] w-[90%]">Lorem ipsum dolor sit amet consectetur 
+   <p class="text-[15px] mx-12 my-2">GLOBAL PROFESIONAL NETWORK</p>
+   <p class="text-[40px] font-bold mx-12">World wide business</p>
+   <p class="text-[18px] w-[80%] m-12">Lorem ipsum dolor sit amet consectetur 
     adipisicing elit. Doloribus nisi nihil labore beatae aliquid 
     cumque facere quis in molestiae, delectus dolorum magnam,
      voluptates saepe magni ipsam minima quidem omnis sequi fugiat 
@@ -47,9 +47,7 @@
      perferendis assumenda nisi reprehenderit nobis atque eum est 
      aut a facere debitis nostrum similique autem maiores molestiae,
       ipsam delectus quas. Perspiciatis explicabo excepturi numquam quia, 
-      quis labore velit esse voluptate tempore sed veritatis sequi sit
-       minima nesciunt animi cupiditate quidem id asperiores neque non 
-       impedit doloribus? Quam optio natus a rerum?</p>
+      </p>
    </div>
       
   <img src="https://picsum.photos/500/350?random=9" alt="picture" />
@@ -58,11 +56,11 @@
 
 
 <div class=" bg-cyan-700  bg-[length:200px_100px] text-white flex justify-around items-center  h-[200px]"> 
-   <a href=""><i class="fa fa-phone-square"></i></a>
+   <a href=""><i class="fa fa-phone-square "></i></a>
   <div>
-  <P class="question">Do you have any question about our services?</P>
-  <p>we provid free consultation so talk with us!</p>
+  <P class="text-[30px] font-bold">Do you have any question about our services?</P>
+  <p> we provid free consultation so talk with us!</p>
   </div>
   
-  <button>CALL FOR FREE CONSULTION  </button>
+  <button class="w-[350px] h-[45px] bg-slate-200 text-[black] font-bold cursor-pointer border-solid border-[1px] border-gray-500 rounded-[25px] hover:bg-cyan-300 translate-x-1" >CALL FOR FREE CONSULTION  </button>
 </div>
