ADD: home page router header component

--- a/src/app/modules/website/pages/home-page/home-page.component.html
+++ b/src/app/modules/website/pages/home-page/home-page.component.html
@@ -1,6 +1,14 @@
+<img src="#" alt="" >
+
+<div class="text-center bg-cyan-700 h-[64vh] text-white flex justify-center items-center flex-col " >
+  <h1 class="text-[70px] mb-[10px]">Making your <br>
+    ideas possible.</h1>
+  <p class="text-[25px]">Lorem ipsum dolor sit amet consectetur<br>
+    adipisicing elit.</p>
+</div>
 <div class=" text-white  flex justify-between items-center mt-[-80px] mr-[100px] mb-[0px] ml-[150px]" >
     <div class="bg-cyan-700 w-[250px] h-[300px]
-     border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] 
+     border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)]
      flex justify-center items-center flex-col ">
       <i class="fa fa-users"></i>
       <h3 class =" text-[25px]">Consolting </h3>
@@ -31,29 +39,29 @@
   <div>
    <p class="text-[15px] mx-12 my-2">GLOBAL PROFESIONAL NETWORK</p>
    <p class="text-[40px] font-bold mx-12">World wide business</p>
-   <p class="text-[18px] w-[80%] m-12">Lorem ipsum dolor sit amet consectetur 
-    adipisicing elit. Doloribus nisi nihil labore beatae aliquid 
+   <p class="text-[18px] w-[80%] m-12">Lorem ipsum dolor sit amet consectetur
+    adipisicing elit. Doloribus nisi nihil labore beatae aliquid
     cumque facere quis in molestiae, delectus dolorum magnam,
-     voluptates saepe magni ipsam minima quidem omnis sequi fugiat 
-     qui repellendus rerum rem architecto! Eligendi beatae quis 
-     perferendis assumenda nisi reprehenderit nobis atque eum est 
+     voluptates saepe magni ipsam minima quidem omnis sequi fugiat
+     qui repellendus rerum rem architecto! Eligendi beatae quis
+     perferendis assumenda nisi reprehenderit nobis atque eum est
      aut a facere debitis nostrum similique autem maiores molestiae,
-      ipsam delectus quas. Perspiciatis explicabo excepturi numquam quia, 
+      ipsam delectus quas. Perspiciatis explicabo excepturi numquam quia,
       </p>
    </div>
-      
+
   <img src="https://picsum.photos/500/350?random=9" alt="picture" />
 </div>
 
 
 
-<div class=" bg-cyan-700  bg-[length:200px_100px] text-white flex justify-around items-center  h-[200px]"> 
+<div class=" bg-cyan-700  bg-[length:200px_100px] text-white flex justify-around items-center  h-[200px]">
    <a href=""><i class="fa fa-phone-square "></i></a>
   <div>
   <P class="text-[30px] font-bold">Do you have any question about our services?</P>
   <p> we provid free consultation so talk with us!</p>
   </div>
-  
+
   <button class="w-[350px] h-[45px] bg-slate-200 text-[black] font-bold cursor-pointer border-solid border-[1px] border-gray-500 rounded-[25px] hover:bg-cyan-300 translate-x-1" >CALL FOR FREE CONSULTION  </button>
 </div>
 
