INIT:footer and header components

--- a/src/app/modules/website/_components/header/header.component.html
+++ b/src/app/modules/website/_components/header/header.component.html
@@ -21,10 +21,10 @@
   <div class="flex items-center justify-end">
     <a class="border-gray-700 border-r text-[14px] px-3 " href="#">HOME</a>
     <a class="border-gray-700 border-r text-[14px] px-3 " [routerLink]="'/aboutus'">ABOUT US</a>
-    <a class="border-gray-700 border-r text-[14px] px-3 " href="#">OUR SERVICES</a>
-    <a class="border-gray-700 border-r text-[14px] px-3 " href="#">OUR PROJECT</a>
-    <a class="border-gray-700 border-r text-[14px] px-3 " href="#">OUR BLOG</a>
-    <a class="border-gray-700 border-r text-[14px] px-3 " href="#">CONTACT US</a>
+    <a class="border-gray-700 border-r text-[14px] px-3 " [routerLink]="'/our-services'">OUR SERVICES</a>
+    <a class="border-gray-700 border-r text-[14px] px-3 " [routerLink]="'/our-projects'">OUR PROJECT</a>
+    <a class="border-gray-700 border-r text-[14px] px-3 " [routerLink]="'/our-blog'">OUR BLOG</a>
+    <a class="border-gray-700 border-r text-[14px] px-3 " [routerLink]="'/contact-us'">CONTACT US</a>
   </div>
   <div>
     <button class="w-[90px] h-[35px] text-white rounded bg-slate-700 border-solid border-1 border-white mx-[20px] cursor-pointer hover:bg-cyan-400">Buy now</button>
