--- a/src/app/modules/website/pages/aboutus-page/aboutus-page.component.html
+++ b/src/app/modules/website/pages/aboutus-page/aboutus-page.component.html
@@ -1,1 +1,135 @@
-<p>aboutus-page works!</p>
+<div
+  class="bg-cyan-700 h-full max-h-96 w-full flex justify-center items-center text-sky-50 font-bold text-[40px]"
+>
+  <h1>About us</h1>
+</div>
+
+<div class="flex justify-center items-between my-96 mx-20">
+  <img
+    src="https://picsum.photos/id/2/500/350"
+    alt="picture"
+    class="h-[300px] w-[500px] border-solid border-cyan-700"
+  />
+  <div class="px-20">
+    <h2 class="text-[50px] text-cyan-700">What we do...</h2>
+    <p class="text-[20px] mt-10 text-gray-500">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
+      debitis. Quisquam illo minus voluptatum eveniet fugiat voluptatem suscipit
+      laboriosam nisi.
+    </p>
+    <p class="text-[16px] mt-10 text-gray-400">
+      Lorem ipsum dolor sit amet consectetu adipisicing elit. Consectetur,
+      debitis. Corrupti culpa quod labore, nesciunt dicta ullam veniam
+      perferendis debitis, molestiae non harum numquam uscipit iusto. Quisquam
+      illo minus voluptatum eveniet fugiat voluptatem suscipit laboriosam nisi
+      labore.
+    </p>
+  </div>
+</div>
+<div>
+  <div class="flex flex-col justify-center items-center">
+    <h3 class="text-[45px] text-cyan-700">Our team</h3>
+    <p class="text-[16px] text-gray-500 w-[700px] text-center mb-20 mt-10">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, mollitia
+      ea autem provident rem alias magni corrupti sequi saepe exercitationem!
+      Vel adipisci excepturi voluptatum .
+    </p>
+  </div>
+
+
+<div class=" flex items-center justify-around m-20 ">
+
+  <div class="flex  flex-col max-w-sm h-94 border-cyan-700 border-2">
+    <div><img
+        src="https://placebeard.it/1280x720random=6"
+        alt=""
+        class="w-80 h-80 m-7"
+      />
+    </div>
+
+
+    <div>
+      <h3 class="text-[25px] text-center text-gray-600">Brain viliams</h3>
+      <h3 class="text-[15px] text-center text-gray-500 ">Travle Agent</h3>
+    </div>
+
+
+   <div class="flex justify-around items-center m-14">
+        <a href="#" class="fa fa-envelope-o "></a>
+        <a href="" class="fa fa-envelope-o"></a>
+        <a href="" class="fa fa-envelope-o"></a></div>
+  </div>
+
+
+
+  <div class="flex  flex-col max-w-sm h-94 border-cyan-700 border-2">
+    <div><img
+        src="https://placebeard.it/1280x720random=7"
+        alt=""
+        class="w-80 h-80 m-7"
+      />
+    </div>
+
+
+    <div>
+      <h3 class="text-[25px] text-center text-gray-600">Duris Hughes</h3>
+      <h3 class="text-[15px] text-center text-gray-500">Travel Agent</h3>
+    </div>
+
+
+   <div class="flex justify-around items-center m-14">
+        <a href="#" class="fa fa-envelope-o "></a>
+        <a href="" class="fa fa-envelope-o"></a>
+        <a href="" class="fa fa-envelope-o"></a></div>
+  </div>
+
+
+
+
+  <div class="flex  flex-col max-w-sm h-94 border-cyan-700 border-2">
+    <div><img
+        src="https://placebeard.it/1280x720random=8"
+        alt=""
+        class="w-80 h-80 m-7"
+      />
+    </div>
+
+
+    <div>
+      <h3 class="text-[25px] text-center text-gray-600">Austin Griffin</h3>
+      <h3 class="text-[15px] text-center text-gray-500">Travel Agent</h3>
+    </div>
+
+
+   <div class="flex justify-around items-center m-14">
+        <a href="#" class="fa fa-envelope-o "></a>
+        <a href="" class="fa fa-envelope-o"></a>
+        <a href="" class="fa fa-envelope-o"></a></div>
+  </div>
+
+
+
+
+    <div class="flex  flex-col max-w-sm h-94 border-cyan-700 border-2">
+    <div><img
+        src="https://placebeard.it/1280x720random=9"
+        alt=""
+        class="w-80 h-80 m-7"
+      />
+    </div>
+
+
+    <div>
+      <h3 class="text-[25px] text-center text-gray-600">Janic Valdes </h3>
+      <h3 class="text-[15px] text-center text-gray-500">Aravel Agent</h3>
+    </div>
+
+
+   <div class="flex justify-around items-center m-14">
+        <a href="#" class="fa fa-envelope-o "></a>
+        <a href="" class="fa fa-envelope-o"></a>
+        <a href="" class="fa fa-envelope-o"></a></div>
+  </div>
+
+</div>
+</div>
