--- a/src/app/modules/website/pages/home-page/home-page.component.html
+++ b/src/app/modules/website/pages/home-page/home-page.component.html
@@ -10,7 +10,7 @@
     <div class="bg-cyan-700 w-[250px] h-[300px]
      border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)]
      flex justify-center items-center flex-col ">
-      <i class="fa fa-users"></i>
+      <i class="fa fa-users "></i>
       <h3 class =" text-[25px]">Consolting </h3>
       <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
@@ -35,7 +35,7 @@
 
 
 
-<div class="flex justify-around items-center h-[100vh]">
+<div class="flex justify-around items-center h-[100vh] mx-16">
   <div>
    <p class="text-[15px] mx-12 my-2">GLOBAL PROFESIONAL NETWORK</p>
    <p class="text-[40px] font-bold mx-12">World wide business</p>
@@ -55,14 +55,6 @@
 
 
 
-<div class=" bg-cyan-700  bg-[length:200px_100px] text-white flex justify-around items-center  h-[200px]">
-   <a href=""><i class="fa fa-phone-square "></i></a>
-  <div>
-  <P class="text-[30px] font-bold">Do you have any question about our services?</P>
-  <p> we provid free consultation so talk with us!</p>
-  </div>
 
-  <button class="w-[350px] h-[45px] bg-slate-200 text-[black] font-bold cursor-pointer border-solid border-[1px] border-gray-500 rounded-[25px] hover:bg-cyan-300 translate-x-1" >CALL FOR FREE CONSULTION  </button>
-</div>
 
 
