INIT:new changes in tailwind

--- a/src/app/modules/website/_components/header/header.component.html
+++ b/src/app/modules/website/_components/header/header.component.html
@@ -30,7 +30,7 @@
     <button class="w-[90px] h-[35px] text-white rounded bg-slate-700 border-solid border-1 border-white mx-[20px] cursor-pointer hover:bg-cyan-400">Buy now</button>
   </div>
   <div >
-    <i class="fa fa-search px-2 text-gray-600" > </i>
-    <i class="fa fa-bars px-2   text-gray-600"> </i>
+    <i class="fa fa-search px-3 text-gray-600 fa-2x " > </i>
+    <i class="fa fa-bars px-3  text-gray-600 fa-2x "> </i>
   </div>
 </div>
