--- a/src/app/modules/website/pages/aboutus-page/aboutus-page.component.html
+++ b/src/app/modules/website/pages/aboutus-page/aboutus-page.component.html
@@ -29,7 +29,7 @@
 <div>
   <div class="flex flex-col justify-center items-center">
     <h3 class="text-[45px] text-cyan-700">Our team</h3>
-    <p class="text-[16px] text-gray-500 w-[700px] text-center mb-20 mt-10">
+    <p class="text-[16px] text-gray-500 w-[700px] text-center my-10">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, mollitia
       ea autem provident rem alias magni corrupti sequi saepe exercitationem!
       Vel adipisci excepturi voluptatum .
@@ -37,7 +37,7 @@
   </div>
 
 
-<div class=" flex items-center justify-around m-20 ">
+<div class=" flex items-center justify-around m-10 ">
 
   <div class="flex  flex-col max-w-sm h-94 border-cyan-700 border-2">
     <div><img
@@ -54,12 +54,11 @@
     </div>
 
 
-   <div class="flex justify-around items-center m-14">
-        <a href="#" class="fa fa-envelope-o "></a>
-        <a href="" class="fa fa-envelope-o"></a>
-        <a href="" class="fa fa-envelope-o"></a></div>
-  </div>
-
+    <div class="flex justify-around items-center m-14 text-gray-600 ">
+      <a href="#" class="fa fa-facebook fa-2x "></a>
+      <a href="" class="fa fa-instagram fa-2x"></a>
+      <a href="" class="fa fa-twitter fa-2x"></a></div>
+</div>
 
 
   <div class="flex  flex-col max-w-sm h-94 border-cyan-700 border-2">
@@ -77,10 +76,10 @@
     </div>
 
 
-   <div class="flex justify-around items-center m-14">
-        <a href="#" class="fa fa-envelope-o "></a>
-        <a href="" class="fa fa-envelope-o"></a>
-        <a href="" class="fa fa-envelope-o"></a></div>
+   <div class="flex justify-around items-center m-14 text-gray-600 ">
+        <a href="#" class="fa fa-facebook fa-2x "></a>
+        <a href="" class="fa fa-instagram fa-2x"></a>
+        <a href="" class="fa fa-twitter fa-2x"></a></div>
   </div>
 
 
@@ -101,11 +100,11 @@
     </div>
 
 
-   <div class="flex justify-around items-center m-14">
-        <a href="#" class="fa fa-envelope-o "></a>
-        <a href="" class="fa fa-envelope-o"></a>
-        <a href="" class="fa fa-envelope-o"></a></div>
-  </div>
+    <div class="flex justify-around items-center m-14 text-gray-600 ">
+      <a href="#" class="fa fa-facebook fa-2x "></a>
+      <a href="" class="fa fa-instagram fa-2x"></a>
+      <a href="" class="fa fa-twitter fa-2x"></a></div>
+</div>
 
 
 
@@ -125,11 +124,11 @@
     </div>
 
 
-   <div class="flex justify-around items-center m-14">
-        <a href="#" class="fa fa-envelope-o "></a>
-        <a href="" class="fa fa-envelope-o"></a>
-        <a href="" class="fa fa-envelope-o"></a></div>
-  </div>
+    <div class="flex justify-around items-center m-14 text-gray-600 ">
+      <a href="#" class="fa fa-facebook fa-2x "></a>
+      <a href="" class="fa fa-instagram fa-2x"></a>
+      <a href="" class="fa fa-twitter fa-2x"></a></div>
+</div>
 
 </div>
 </div>
