--- a/src/app/modules/website/_component/footer/footer.component.html
+++ b/src/app/modules/website/_component/footer/footer.component.html
@@ -1,9 +1,9 @@
 <div class=" bg-cyan-700  bg-[length:200px_100px] text-white flex justify-around items-center  h-[200px]">
-    <a href=""><i class="fa fa-phone-square "></i></a>
+    <a href=""><i class="fa fa-phone-square fa-5x "></i></a>
    <div>
    <P class="text-[30px] font-bold">Do you have any question about our services?</P>
-   <p> we provid free consultation so talk with us!</p>
+   <p class="text-[14px] m-4"> we provid free consultation so talk with us!</p>
    </div>
  
-   <button class="w-[350px] h-[45px] bg-slate-200 text-[black] font-bold cursor-pointer border-solid border-[1px] border-gray-500 rounded-[25px] hover:bg-cyan-300 translate-x-1" >CALL FOR FREE CONSULTION  </button>
+   <button class="w-[350px] h-[45px] bg-slate-200 text-[black] font-bold cursor-pointer border-solid border-[1px] border-gray-500 rounded-[25px] hover:bg-cyan-300 translate-x-1 text-[12px]" >CALL FOR FREE CONSULTION  </button>
  </div>
