--- a/src/app/modules/website/pages/home-page/home-page.component.html
+++ b/src/app/modules/website/pages/home-page/home-page.component.html
@@ -10,22 +10,22 @@
     <div class="bg-cyan-700 w-[250px] h-[300px]
      border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)]
      flex justify-center items-center flex-col ">
-      <i class="fa fa-users "></i>
+      <i class="fa fa-users fa-3x "></i>
       <h3 class =" text-[25px]">Consolting </h3>
       <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
     <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
-      <i class="fa fa-bar-chart"></i>
+      <i class="fa fa-bar-chart fa-3x "></i>
       <h3 class =" text-[25px]" >Marketing</h3>
       <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
     <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
-      <i class="fa fa-archive"></i>
+      <i class="fa fa-archive fa-3x "></i>
       <h3 class =" text-[25px]">Resources</h3>
       <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
     <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] flex justify-center items-center flex-col ">
-      <i class="fa fa-money"></i>
+      <i class="fa fa-money fa-3x "></i>
       <h3 class =" text-[25px]">Finance</h3>
       <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
     </div>
