--- a/src/app/modules/website/pages/contact-us/contact-us.component.html
+++ b/src/app/modules/website/pages/contact-us/contact-us.component.html
@@ -1,1 +1,39 @@
-<p>contact-us works!</p>
+<div class="flex justify-around items-center h-full">
+  <div class="bg-cyan-700 p-14  border-solid border-gray-700 border-2 rounded-2xl w-[550px] h-[600px] shadow-xl">
+    <div class="text-white pt-40  px-10 text-xl">
+        <p>How can we help you?</p>
+    </div>
+    <div class=" text-5xl font-bold p-10  text-white">
+      <p>Contact us</p>
+    </div>
+    <div class="text-2xl p-10 text-gray-200">
+      <p>
+        We are here to help and answer any questions you might have. We look
+        forward to hearing from you!
+      </p>
+    </div>
+    <div class=" p-5  flex ">
+        <a href=""><i class="fa fa-location-arrow fa-2x text-white pr-4"></i></a>
+        <p class="text-2xl  text-white">Address</p>
+    </div>
+    <div class="flex p-5">
+        <a href=""><i class="fa fa-phone fa-2x  text-white pr-4"></i></a>
+        <p class="text-2xl  text-white">0912 345 6789</p></div>
+    <div class="flex p-5">
+        <a href=""><i class="fa fa-send fa-2x  text-white pr-4"></i></a>
+        <p class="text-2xl text-white pb-40">gmail.com</p></div>
+  </div>
+
+
+  <div class="bg-cyan-700 p-14 box-border border-solid border-gray-700 border-2 rounded-2xl w-[550px] h-[600px] flex flex-col shadow-xl">
+    <div ><p class="text-center font-bold text-white text-4xl mt-32">Send us a message...</p></div>
+    <span class=" mt-8 m-2 text-2xl text-white ">Name</span>
+    <input type="text" class=" border-solid border-gray-700 border rounded-lg h-12" />
+    <span class=" m-2 text-2xl text-white ">Gmail</span>
+    <input type="gmail" class=" border-solid border-gray-700 border rounded-lg h-12"  />
+    <span class=" mt-6 m-2 text-2xl  text-white " >message</span>
+    <input type="text" placeholder=" Enter your message..." class=" border-solid border-gray-700 border rounded-lg h-60 " />
+    
+    <button class="w-72 h-16 bg-cyan-950 border border-gray-500 border-solid rounded-3xl my-11 text-white text-2xl hover:bg-blue-600">Submit</button>
+  </div>
+</div>
