INIT:our-services changed

--- a/src/app/modules/website/pages/our-services/our-services.component.html
+++ b/src/app/modules/website/pages/our-services/our-services.component.html
@@ -1,1 +1,45 @@
-<p>our-services works!</p>
+<div class=" ">
+    <div class="flex items-center justify-around h-[550px] bg-cyan-700  " >
+        
+        <img
+        src="https://picsum.photos/id/2/500/350"
+        alt="picture"
+        class= "w-[50%] h-[400px] p-12 "/>
+        <div class=" w-[50%] h-[400px] text-center  ">
+        <p class="text-[70px] text-white  pt-24">Our sevices</p>
+        <p class="text-3xl text-white leading-loose p-16">
+          Lorem ipsum dolor sit, 
+        amet consectetur adipisicing elit.
+        Quaerat dolores, eaque harum, sunt
+        aliquam asperiores error illo odio
+        dicta earum blanditiis sit aperiam
+        repudiandae! Earum voluptate corporis
+         laborum blanditiis cumque!</p>
+        </div>
+    </div>
+
+    <div class=" text-white  flex justify-between items-center mx-52  mt-[-65px] mb-96" >
+        <div class="bg-cyan-700 w-[250px] h-[300px]
+         border-gray-200 border border-solid shadow-lg
+         flex justify-center items-center flex-col ">
+          <i class="fa fa-users fa-3x "></i>
+          <h3 class =" text-[25px]">Digital services </h3>
+          <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border border-solid shadow-lg flex justify-center items-center flex-col ">
+          <i class="fa fa-bar-chart fa-3x "></i>
+          <h3 class =" text-[25px]" >Creative ideas</h3>
+          <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border border-solid shadow-lg flex justify-center items-center flex-col ">
+          <i class="fa fa-archive fa-3x "></i>
+          <h3 class =" text-[25px]">online services</h3>
+          <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="bg-cyan-700 w-[250px] h-[300px] border-gray-200 border border-solid shadow-lg flex justify-center items-center flex-col ">
+          <i class="fa fa-money fa-3x "></i>
+          <h3 class =" text-[25px] p-4">Web design</h3>
+          <p class=" text-[15px] "> Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
+</div>
