--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,8 @@
   :root {
     box-sizing : border-box;
     font-size : 62.5%;
-    height: 100%
+    height: 100%;    
+    font-family:  "Spectral", serif;
   }
 
 }
@@ -20,4 +21,5 @@ html, body {
   margin: 0;
   overflow-x: hidden;
   height: 100%;
+  
 }
