INIT: new changes

--- a/src/app/modules/website/pages/home-page/home-page.component.html
+++ b/src/app/modules/website/pages/home-page/home-page.component.html
@@ -1,14 +1,13 @@
 <img src="#" alt="" >
 
-<div class="text-center bg-cyan-700 h-[64vh] text-white flex justify-center items-center flex-col " >
-  <h1 class="text-[70px] mb-[10px]">Making your <br>
+<div class="text-center bg-cyan-700 h-[64vh] text-white flex justify-center items-center flex-col md:hidden  " >
+  <h1 class="text-[40px] sm:text-[50px] md:text-[60px] lg:text-[70px] ">Making your <br>
     ideas possible.</h1>
-  <p class="text-[25px]">Lorem ipsum dolor sit amet consectetur<br>
+  <p class="text-[14px] sm:text-[18px] md:text-[22px] lg:text-[25px] py-4">Lorem ipsum dolor sit amet consectetur<br>
     adipisicing elit.</p>
 </div>
-<div class=" text-white  flex justify-between items-center mt-[-80px] mr-[100px] mb-[0px] ml-[150px]" >
-    <div class="bg-cyan-700 w-[250px] h-[300px]
-     border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)]
+<div class=" text-white flex  justify-between items-center -mt-10 md:-mt-16 lg:-mt-20 mx-56 sm:mx-10 lg:mx-52" >
+    <div class="bg-cyan-700 w-[250px] h-[300px]  border-gray-200 border-[0.5px] border-solid shadow-[5px_10px_15px_rgba(0,0,0,0.2)] 
      flex justify-center items-center flex-col ">
       <i class="fa fa-users fa-3x "></i>
       <h3 class =" text-[25px]">Consolting </h3>
@@ -37,7 +36,7 @@
 
 <div class="flex justify-around items-center h-[100vh] mx-16">
   <div>
-   <p class="text-[15px] mx-12 my-2">GLOBAL PROFESIONAL NETWORK</p>
+   <p class="text-[15px] mx-12 my-2 ">GLOBAL PROFESIONAL NETWORK</p>
    <p class="text-[40px] font-bold mx-12">World wide business</p>
    <p class="text-[18px] w-[80%] m-12">Lorem ipsum dolor sit amet consectetur
     adipisicing elit. Doloribus nisi nihil labore beatae aliquid
